force-app/main/default/objects/Evidence_Setting__mdt/Evidence_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Evidence Setting</label>
    <pluralLabel>Evidence Settings</pluralLabel>
</CustomObject>