force-app/main/default/objects/Evidence_Setting__mdt/fields/Anchor_Cron__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Cron__c</fullName>
    <label>Anchor Cron</label>
    <type>Text</type>
    <length>120</length>
</CustomField>