force-app/main/default/objects/Evidence_Setting__mdt/fields/Canonical_Version__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Version__c</fullName>
    <label>Canonical Version</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>