force-app/main/default/objects/Evidence_Setting__mdt/fields/Capture_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Capture_Enabled__c</fullName>
    <label>Capture Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>