force-app/main/default/objects/Evidence_Setting__mdt/fields/Chain_Verification_Cron__c.field-meta.xml
<CustomField>
    <fullName>Chain_Verification_Cron__c</fullName>
    <label>Chain Verification Cron</label>
    <type>Text</type>
    <length>120</length>
</CustomField>