force-app/main/default/objects/Evidence_Setting__mdt/fields/Completeness_Check_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Check_Enabled__c</fullName>
    <label>Completeness Check Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>