force-app/main/default/objects/Evidence_Setting__mdt/fields/Completeness_Tolerance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Tolerance_Percent__c</fullName>
    <label>Completeness Tolerance Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>