force-app/main/default/objects/Evidence_Setting__mdt/fields/Default_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Retention_Days__c</fullName>
    <label>Default Retention Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>