force-app/main/default/objects/Evidence_Setting__mdt/fields/Require_Rationale_Before_Action__c.field-meta.xml
<CustomField>
    <fullName>Require_Rationale_Before_Action__c</fullName>
    <label>Require Rationale Before Action</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>