force-app/main/default/objects/Evidence_Setting__mdt/fields/Verification_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Verification_Batch_Size__c</fullName>
    <label>Verification Batch Size</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>